--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -461,39 +461,61 @@
 
                     <Border Grid.Column="1" Margin="6,0,0,0" AllowDrop="True" Drop="QuickLaunch_Drop" DragOver="QuickLaunch_DragOver" Background="Transparent">
                         <Grid>
-                            <TextBlock x:Name="TxtDragHint" Text="将左侧版本拖动到此处创建快捷启动卡片" 
-                                       HorizontalAlignment="Center" 
-                                       VerticalAlignment="Center" 
-                                       Foreground="#40FFFFFF" 
-                                       FontSize="14"
-                                       IsHitTestVisible="False">
-                                <TextBlock.Style>
-                                    <Style TargetType="TextBlock">
-                                        <Setter Property="Visibility" Value="Collapsed"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding Items.Count, ElementName=QuickLaunchItems}" Value="0">
-                                                <Setter Property="Visibility" Value="Visible"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </TextBlock.Style>
-                            </TextBlock>
-                            <ItemsControl x:Name="QuickLaunchItems" Margin="0">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <UniformGrid Columns="3" Rows="3"/>
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <Button Content="{Binding}" Style="{StaticResource QuickLaunchCardStyle}" 
-                                                Click="QuickLaunchCard_Click"
-                                                PreviewMouseLeftButtonDown="QuickLaunchCard_PreviewMouseLeftButtonDown"
-                                                MouseMove="QuickLaunchCard_MouseMove"
-                                                Margin="6"/>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
+                            <Grid x:Name="QuickLaunchPanel">
+                                <TextBlock x:Name="TxtDragHint" Text="将左侧版本拖动到此处创建快捷启动卡片" 
+                                           HorizontalAlignment="Center" 
+                                           VerticalAlignment="Center" 
+                                           Foreground="#40FFFFFF" 
+                                           FontSize="14"
+                                           IsHitTestVisible="False">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Items.Count, ElementName=QuickLaunchItems}" Value="0">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                                <ItemsControl x:Name="QuickLaunchItems" Margin="0">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <UniformGrid Columns="3" Rows="3"/>
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Button Content="{Binding}" Style="{StaticResource QuickLaunchCardStyle}" 
+                                                    Click="QuickLaunchCard_Click"
+                                                    PreviewMouseLeftButtonDown="QuickLaunchCard_PreviewMouseLeftButtonDown"
+                                                    MouseMove="QuickLaunchCard_MouseMove"
+                                                    Margin="6"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </Grid>
+
+                            <!-- 版本设置面板 -->
+                            <Grid x:Name="VersionSettingsPanel" Visibility="Collapsed">
+                                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+                                    <TextBlock Text="版本设置" FontSize="18" FontWeight="Bold" Margin="0,0,0,20" HorizontalAlignment="Center"/>
+                                    
+                                    <Button Content="导出键位配置" Style="{StaticResource BaseButtonStyle}" Height="40" Margin="0,0,0,10" Click="BtnExportConfig_Click" Tag="12"/>
+                                    
+                                    <Grid Margin="0,10,0,10">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <ComboBox x:Name="ComboSavedConfigs" Height="40" Margin="0,0,10,0"/>
+                                        <Button Grid.Column="1" Content="导入" Style="{StaticResource BaseButtonStyle}" Width="80" Height="40" Click="BtnImportConfig_Click" Tag="12"/>
+                                    </Grid>
+                                    
+                                    <Button Content="返回" Style="{StaticResource BaseButtonStyle}" Height="35" Width="100" Margin="0,20,0,0" Click="BtnVersionSettings_Click" Tag="8"/>
+                                </StackPanel>
+                            </Grid>
                         </Grid>
                     </Border>
                 </Grid>
@@ -840,7 +862,7 @@
 
                 <Border Grid.Column="2" Background="{StaticResource CardBackground}" CornerRadius="{StaticResource MainCornerRadius}" 
                         Margin="6,0" VerticalAlignment="Center" Height="48" Width="48" BorderBrush="{StaticResource VisibleBorderBrush}" BorderThickness="1">
-                    <Button Content="" FontFamily="Segoe MDL2 Assets" Style="{StaticResource BaseButtonStyle}" Tag="{StaticResource MainCornerRadius}" Foreground="#40FFFFFF" FontSize="20" Width="48" Height="48"/>
+                    <Button x:Name="BtnVersionSettings" Content="" FontFamily="Segoe MDL2 Assets" Style="{StaticResource BaseButtonStyle}" Tag="{StaticResource MainCornerRadius}" Foreground="#40FFFFFF" FontSize="20" Width="48" Height="48" Click="BtnVersionSettings_Click"/>
                 </Border>
 
                 <Button x:Name="BtnLaunch" Grid.Column="3" Content="启动游戏" Click="BtnLaunch_Click" VerticalAlignment="Center" Height="48" Width="140" Margin="6,0,0,0" FontWeight="Bold" FontSize="15" IsEnabled="False">
